---
title: Modelo Entidad-Relacion - Mundial FIFA (Entrega 1)
---
erDiagram
    SELECCION ||--o{ PARTICIPACION_PARTIDO : "juega"
    EDICION_MUNDIAL ||--o{ ESTADIO : "se juega en"
    EDICION_MUNDIAL ||--o{ PARTIDO : "programa"
    EDICION_MUNDIAL ||--o{ SELECCION : "convoca a"
    ESTADIO ||--o{ PARTIDO : "aloja"
    PARTIDO ||--|{ PARTICIPACION_PARTIDO : "tiene 2 (CASCADE)"

    EDICION_MUNDIAL {
        NUMBER(10)     id_edicion             PK  ""
        NUMBER(4)      anio                   UK  ""
        VARCHAR2(100)  pais_sede                  ""
        VARCHAR2(200)  lema                       "nulo permitido"
        DATE           fecha_inicio               ""
        DATE           fecha_fin                  ""
    }

    ESTADIO {
        NUMBER(10)     id_estadio             PK  ""
        NUMBER(10)     id_edicion             FK  ""
        VARCHAR2(150)  nombre                 UK  ""
        VARCHAR2(100)  ciudad                     ""
        NUMBER(10)     capacidad                  ""
    }

    SELECCION {
        NUMBER(10)     id_seleccion           PK  ""
        NUMBER(10)     id_edicion             FK  ""
        VARCHAR2(100)  pais                   UK  ""
        VARCHAR2(50)   confederacion              ""
        VARCHAR2(5)    grupo                      "nulo permitido"
    }

    PARTIDO {
        NUMBER(10)     id_partido             PK  ""
        NUMBER(10)     id_edicion             FK  ""
        NUMBER(10)     id_estadio             FK  ""
        TIMESTAMP(6)   fecha_hora             UK  ""
        VARCHAR2(50)   fase                       ""
        NUMBER(10)     asistencia_registrada      "nulo permitido"
    }

    PARTICIPACION_PARTIDO {
        NUMBER(10)     id_participacion       PK  ""
        NUMBER(10)     id_partido             FK  ""
        NUMBER(10)     id_seleccion           FK  ""
        VARCHAR2(20)   condicion              UK  ""
        NUMBER(3)      goles_marcados             ""
    }
